为什么改了包名无法运行？(奇怪的运行方式)

--- a/AppScope/app.json5
+++ b/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "cnsr.fjh03.front",
+    "bundleName": "cnsr.fjh03.myapplication",
     "vendor": "example",
     "versionCode": 1000000,
     "versionName": "1.0.0",
